# microscale

./: .gitignore  pyproject.toml  readme.md
src/microscale/: cli.py  config.py  model.py  pipeline.py
src/microscale.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/microscale/ops/: concatenate.py  exif.py  jpegtran.py  metadata.py  scale.py
tests/: test_concatenate.py  test_crop.py  test_pipeline.py  test_scale.py  test_smoke.py
