[project]
name = "microscale"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.1.0",
]

[project.scripts]
microscale = "microscale.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"


[tool.uv]
package = true

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
]
