[project]
name = "microscale"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.1.0",
    "pyexiv2>=2.15.5",
]

[project.scripts]
microscale = "microscale.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"


[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
]
